--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZebaAnika</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-bannar">
+        <div class="half-width">
+            <h1>Welcome to<h1>
+            <h1 ><span class="orange-color">Zeba Anika's</span>World!</span></h1>
+            <h3>Web Developer</h3>
+            <p>My name is Zeba Anika and I’m a recent computer science graduate from iubat University.Now,i am doing a course with programming hero. In future,I want to be a web developer.I learn html and css.Also know how to use github.</p>
+             <a class="btn-hire" target="_blank" href="https://www.facebook.com/">HireMe</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg (1).png"alt="ami">
+        </div>
+    </section>
 </body>
 </html>
