--- a/index.html
+++ b/index.html
@@ -23,5 +23,18 @@
             <img src="images/my-bg (1).png"alt="ami">
         </div>
     </section>
+    <section class="big-dream">
+        <div  class="half-width">
+         <img src="images/my-bg2.png">
+        </div>
+        <div  class="half-width">
+            <h1>Big Dream</h1>
+            <h2>Become a web Developer</h2>
+            <p>
+            I already learned the basic HTML and CSS.Now i can make a simple website.Even i am also know about Github.My goal is build three website by using HTML and CSS.           
+            </p>
+            <a class="btn-hire" target="_blank" href="https://www.facebook.com/">Download Resume</a>
+        </div>
+    </section>
 </body>
 </html>
