--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-bannar">
+    <section class="top-bannar faxiable-section">
         <div class="half-width">
             <h1>Welcome to<h1>
             <h1 ><span class="orange-color">Zeba Anika's</span>World!</span></h1>
@@ -23,7 +23,7 @@
             <img src="images/my-bg (1).png"alt="ami">
         </div>
     </section>
-    <section class="big-dream">
+    <section class="big-dream faxiable-section">
         <div  class="half-width">
          <img src="images/my-bg2.png">
         </div>
@@ -36,5 +36,28 @@
             <a class="btn-hire" target="_blank" href="https://www.facebook.com/">Download Resume</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1> Experience </h1>
+    <div class="faxiable-section">
+        <div id="full-stack" class="experience-items">
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange-color">2021-present | Pro level Web Developer</h3>
+            <p>
+                I am the master of html ,css and js.I can build a website.I know everything about website development,security,servey.I can managed fortend and backend development of a website  
+            </p>     
+        </div>
+        <div id="baby-web"class="experience-items">
+            <h2>Baby Web developer</h2>
+            <h3 class="orange-color">2022-present | Programming Hero Web Developer</h3>
+            <p>
+               I am learn html,css and js.They donot offer me a job.I am build some project under their observation.Now,I can work remote job as a web developer.
+            </p>
+        </div>
+    </div>
+
+    </section>
 </body>
+<footer>
+    <p>@Zeba Anika-2022 | Programming Hero.com</p>
+</footer>
 </html>
